--- a/RssReader/FeedTableViewCell.xib
+++ b/RssReader/FeedTableViewCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -16,32 +17,48 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V6d-Ut-DON">
-                        <rect key="frame" x="8" y="8" width="304" height="30"/>
+                        <rect key="frame" x="125" y="8" width="187" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="WXz-4H-7tQ"/>
+                            <constraint firstAttribute="height" constant="30" id="qan-76-GOg"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="desc" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aup-AP-1qc">
-                        <rect key="frame" x="8" y="58" width="304" height="18"/>
+                        <rect key="frame" x="125" y="38" width="187" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Kl-jB-fpo">
+                        <rect key="frame" x="8" y="8" width="91" height="93"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="4Kl-jB-fpo" secondAttribute="height" multiplier="91:93" id="NKs-Rt-f4C"/>
+                            <constraint firstAttribute="width" constant="91" id="hms-og-Sjb"/>
+                        </constraints>
+                    </imageView>
+                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dZP-j8-s5p">
+                        <rect key="frame" x="43" y="45" width="20" height="20"/>
+                    </activityIndicatorView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="Aup-AP-1qc" secondAttribute="trailing" id="8bf-KZ-aTG"/>
-                    <constraint firstItem="Aup-AP-1qc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="50" id="PDN-Cj-Sl5"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="V6d-Ut-DON" secondAttribute="trailing" id="Zt2-bt-uLi"/>
-                    <constraint firstItem="V6d-Ut-DON" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="exr-mh-Dgs"/>
-                    <constraint firstItem="V6d-Ut-DON" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="gsQ-Q4-K8f"/>
-                    <constraint firstItem="Aup-AP-1qc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="mmI-3A-eKP"/>
+                    <constraint firstItem="4Kl-jB-fpo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="8qG-P0-Dcd"/>
+                    <constraint firstItem="Aup-AP-1qc" firstAttribute="top" secondItem="V6d-Ut-DON" secondAttribute="bottom" id="BJC-lJ-sWy"/>
+                    <constraint firstAttribute="topMargin" secondItem="V6d-Ut-DON" secondAttribute="top" id="CL5-gs-xTQ"/>
+                    <constraint firstItem="V6d-Ut-DON" firstAttribute="leading" secondItem="4Kl-jB-fpo" secondAttribute="trailing" constant="26" id="DeD-3A-1Lt"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Aup-AP-1qc" secondAttribute="trailing" id="EOW-aF-0kl"/>
+                    <constraint firstItem="Aup-AP-1qc" firstAttribute="leading" secondItem="4Kl-jB-fpo" secondAttribute="trailing" constant="26" id="bvN-ES-rQY"/>
+                    <constraint firstItem="4Kl-jB-fpo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="cZ6-lr-mbv"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="V6d-Ut-DON" secondAttribute="trailing" id="iAx-sZ-bsP"/>
+                    <constraint firstItem="dZP-j8-s5p" firstAttribute="centerX" secondItem="4Kl-jB-fpo" secondAttribute="centerX" id="kT5-g5-ja0"/>
+                    <constraint firstItem="dZP-j8-s5p" firstAttribute="centerY" secondItem="4Kl-jB-fpo" secondAttribute="centerY" id="w3F-1o-jA9"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="desc" destination="Aup-AP-1qc" id="53V-WE-ezk"/>
+                <outlet property="indicator" destination="dZP-j8-s5p" id="Bsp-6H-Jfp"/>
+                <outlet property="thumbnailView" destination="4Kl-jB-fpo" id="73E-US-sGx"/>
                 <outlet property="title" destination="V6d-Ut-DON" id="kbL-TH-s9z"/>
             </connections>
             <point key="canvasLocation" x="223" y="201"/>
